--- a/a211_AutoCabinet/a211_AutoCabinet.csproj
+++ b/a211_AutoCabinet/a211_AutoCabinet.csproj
@@ -302,6 +302,9 @@
     <EmbeddedResource Include="Forms\MainForm.ko-KR.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\MainForm.lg.resx">
+      <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
